@@ -471,9 +471,11 @@ class Groups_Shortcodes {
 
 		$options = shortcode_atts(
 			array(
+				'class'             => '',
 				'group'             => '',
 				'display_message'   => true,
 				'display_is_member' => false,
+				'submit_class'      => '',
 				/* translators: group name */
 				'submit_text'       => esc_html__( 'Join the %s group', 'groups' )
 			),
@@ -504,6 +506,8 @@ class Groups_Shortcodes {
 				$display_is_member = false;
 		}
 
+		$class = trim( $options['class'] );
+		$submit_class = trim( $options['submit_class'] );
 		$group = trim( $options['group'] );
 		$current_group = Groups_Group::read( $group );
 		if ( !$current_group ) {
@@ -534,12 +538,19 @@ class Groups_Shortcodes {
 				}
 				if ( !Groups_User::user_is_member( $user_id, $current_group->group_id ) ) {
 					$submit_text = sprintf( $options['submit_text'], wp_filter_nohtml_kses( $current_group->name ) );
-					$output .= '<div class="groups-join">';
+					$output .= sprintf(
+						'<div class="groups-join%s">',
+						strlen( $class ) > 0 ? ' ' . esc_attr( $class ) : '',
+					);
 					$output .= '<form action="#" method="post">';
 					$output .= '<input type="hidden" name="groups_action" value="join" />';
 					$output .= '<input type="hidden" name="group_id" value="' . esc_attr( $current_group->group_id ) . '" />';
-					$output .= '<input type="submit" value="' . esc_attr( $submit_text ) . '" />';
-					$output .=  wp_nonce_field( $nonce_action, $nonce, true, false );
+					$output .= sprintf(
+						'<input class="groups-join-submit%s" type="submit" value="%s" />',
+						strlen( $submit_class ) > 0 ? ' ' . esc_attr( $submit_class ) : '',
+						esc_attr( $submit_text )
+					);
+					$output .= wp_nonce_field( $nonce_action, $nonce, true, false );
 					$output .= '</form>';
 					$output .= '</div>';
 				} else if ( $display_message ) {
@@ -629,7 +640,7 @@ class Groups_Shortcodes {
 					$output .= '<input type="hidden" name="groups_action" value="leave" />';
 					$output .= '<input type="hidden" name="group_id" value="' . esc_attr( $current_group->group_id ) . '" />';
 					$output .= '<input type="submit" value="' . esc_attr( $submit_text ) . '" />';
-					$output .=  wp_nonce_field( $nonce_action, $nonce, true, false );
+					$output .= wp_nonce_field( $nonce_action, $nonce, true, false );
 					$output .= '</form>';
 					$output .= '</div>';
 				} else if ( $display_message ) {
